force-app/src/objects/EventApi__Schedule_Item__c.object
<CustomObject>
    <description>Create and publish a schedule of activities configured for a given event.</description>
    <fields>
        <fullName>EventApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the GL Account used for A/R transactions.</description>
        <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Schedule Item (A/R Account)</relationshipLabel>
        <relationshipName>ScheduleItems_AR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</description>
        <inlineHelpText>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Schedule Item (Adjustment Account)</relationshipLabel>
        <relationshipName>Adjustment_Account_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Allow_Conflicts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, system will allow another schedule item to overlap the time slot for this schedule item.</description>
        <inlineHelpText>When checked, system will allow another schedule item to overlap the time slot for this schedule item.</inlineHelpText>
        <label>Allow Conflicts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Assignments_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to assigning people to a subscription.</description>
        <inlineHelpText>The label to display in the wizard for the step related to assigning people to a subscription.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Schedule Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated Override ** The Capacity is used to restrict Attendees from registering once the threshold has been met if &quot;Enable Waitlisting&quot; is checked. Derives automatically from the &quot;Capacity&quot; of the related Room.</description>
        <inlineHelpText>** System Calculated Override ** The Capacity is used to restrict Attendees from registering once the threshold has been met if &quot;Enable Waitlisting&quot; is checked. Derives automatically from the &quot;Capacity&quot; of the related Room.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Cost__c</fullName>
        <description>The cost of the Schedule Item.</description>
        <inlineHelpText>The cost of the Schedule Item.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Defer_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
        <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
        <label>Defer Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Term__c</fullName>
        <label>Deferred Revenue Term (In Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Disable_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</description>
        <inlineHelpText>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</inlineHelpText>
        <label>Disable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Discount_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has been reserved for future use.</description>
        <inlineHelpText>This field has been reserved for future use.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Schedule Item (Discount Account)</relationshipLabel>
        <relationshipName>Discount_Account_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Name__c</fullName>
        <description>Schedule item name as you would like it to appear on the event pages.</description>
        <inlineHelpText>Schedule item name as you would like it to appear on the event pages.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Duration__c</fullName>
        <description>** System Calculated ** Duration in hours.</description>
        <formula>IF(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24) &gt; 9,TEXT(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24)),&quot;0&quot; &amp; TEXT(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24)))
&amp; &quot;:&quot; &amp;
IF(ROUND(MOD((EventApi__Start_Date_Time__c - EventApi__End_Date_Time__c)*1440,60),0)&gt;9,TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)), IF(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)&gt; 9,TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)),&quot;0&quot; &amp; TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0))))</formula>
        <inlineHelpText>** System Calculated ** Duration in hours.</inlineHelpText>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</description>
        <inlineHelpText>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees will have the option to be added to a waitlist once tickets are sold out (or capacity is reached) for this schedule item.</description>
        <inlineHelpText>When checked, attendees will have the option to be added to a waitlist once tickets are sold out (or capacity is reached) for this schedule item.</inlineHelpText>
        <label>Enable Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Date_Time__c</fullName>
        <description>** Required ** Enter the end date and time for the schedule item.</description>
        <inlineHelpText>** Required ** Enter the end date and time for the schedule item.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The event end date.</description>
        <inlineHelpText>**Required** The event end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Time__c</fullName>
        <description>** System Calculated ** The scheduled end time.</description>
        <formula>IF(
  OR(
    VALUE( MID( TEXT( EventApi__End_Date_Time__c + (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( EventApi__End_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( EventApi__End_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24)), 12, 2 ) )
   -
   IF(
     VALUE( MID( TEXT( EventApi__End_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
     0,
     12
   )
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( EventApi__End_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 15, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( EventApi__End_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The scheduled end time.</inlineHelpText>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event category. When linked, this schedule item will be included automatically in new events created within the same category.</description>
        <inlineHelpText>Link to the related event category. When linked, this schedule item will be included automatically in new events created within the same category.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Schedule (Template)</relationshipLabel>
        <relationshipName>Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event.</description>
        <inlineHelpText>Link to the related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Flex_Day_of_the_Month__c</fullName>
        <label>Flex Day of the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the schedule item.</description>
        <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the schedule item.</inlineHelpText>
        <label>Schedule Item Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Schedule Items</relationshipLabel>
        <relationshipName>Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Hide_During_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field removes this session from the registration&apos;s agenda page.</description>
        <inlineHelpText>Checking this field removes this session from the registration&apos;s agenda page.</inlineHelpText>
        <label>Hide During Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_Path__c</fullName>
        <defaultValue>&quot;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&quot;</defaultValue>
        <description>Image displays in the shopping cart and checkout page.</description>
        <inlineHelpText>Image displays in the shopping cart and checkout page.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_URL__c</fullName>
        <defaultValue>&quot;https://package-assets.s3.amazonaws.com/master/emerald/img/placeholders/item.png&quot;</defaultValue>
        <description>URL path of the image you want to display for this item.</description>
        <inlineHelpText>URL path of the image you want to display for this item.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</description>
        <inlineHelpText>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</inlineHelpText>
        <label>Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Schedule Item (Income Account)</relationshipLabel>
        <relationshipName>Income_Account_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Interview_Form_Display_Label__c</fullName>
        <description>Text heading for the schedule item form.</description>
        <inlineHelpText>Text heading for the schedule item form.</inlineHelpText>
        <label>Form Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Invoice_Payment_Priority__c</fullName>
        <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
        <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
        <label>Payment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the schedule item is available for sale (if ticketed) and for publishing to the event.</description>
        <inlineHelpText>When checked, the schedule item is available for sale (if ticketed) and for publishing to the event.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Automatically_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Tax_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</description>
        <inlineHelpText>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</inlineHelpText>
        <label>Is Tax Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable tax specific controls and features for this schedule item.</description>
        <inlineHelpText>** System Calculated Override ** Enable tax specific controls and features for this schedule item.</inlineHelpText>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a system field. Update at your own risk.</description>
        <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a system field. Update at your own risk.</description>
        <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Line_Description__c</fullName>
        <description>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</description>
        <inlineHelpText>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
        <description>** Conditionalbly Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</description>
        <inlineHelpText>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</inlineHelpText>
        <label>RESERVED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Price__c</fullName>
        <description>The list price of the schedule item, if applicable.</description>
        <inlineHelpText>The list price of the schedule item, if applicable.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maximum capacity of the room or number of tickets available for the session.</description>
        <inlineHelpText>Maximum capacity of the room or number of tickets available for the session.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Remaining__c</fullName>
        <description>The capacity/ticket quantity minus the tickets sold.</description>
        <formula>EventApi__Quantity_Available__c - EventApi__Quantity_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The capacity/ticket quantity minus the tickets sold.</inlineHelpText>
        <label>Tickets Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of tickets sold for this schedule item.</description>
        <inlineHelpText>The number of tickets sold for this schedule item.</inlineHelpText>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Refund_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
        <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
        <label>Refund Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Schedule Item (Refund Account)</relationshipLabel>
        <relationshipName>Refund_Account_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Require_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</description>
        <inlineHelpText>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Required_for_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field automatically includes this session for purchase during registration.</description>
        <inlineHelpText>Checking this field automatically includes this session for purchase during registration.</inlineHelpText>
        <label>Required for Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Restrict_Number_of_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</description>
        <inlineHelpText>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over Time</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Term_Rule__c</fullName>
        <label>Revenue Recognition Term Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Partial Credit</fullName>
                </value>
                <value>
                    <fullName>Flex Day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the room that the schedule item is taking place in.</description>
        <inlineHelpText>Link to the room that the schedule item is taking place in.</inlineHelpText>
        <label>Room/Location</label>
        <referenceTo>EventApi__Room__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__SKU__c</fullName>
        <description>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</description>
        <inlineHelpText>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Session_End_Time__c</fullName>
        <description>**Required** The event end time (HH:MM).</description>
        <inlineHelpText>**Required** The event end time (HH:MM).</inlineHelpText>
        <label>End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Session_Start_Time__c</fullName>
        <description>**Required** The event start time (HH:MM).</description>
        <inlineHelpText>**Required** The event start time (HH:MM).</inlineHelpText>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Date_Time__c</fullName>
        <description>** Required ** Enter the start date and time for the schedule item.</description>
        <inlineHelpText>** Required ** Enter the start date and time for the schedule item.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The event start date.</description>
        <inlineHelpText>**Required** The event end date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Time__c</fullName>
        <description>** System Calculated ** The scheduled start time.</description>
        <formula>IF(
  OR(
    VALUE( MID( TEXT( EventApi__Start_Date_Time__c + (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24)), 12, 2 ) )
   -
   IF(
     VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
     0,
     12
   )
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 15, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The scheduled start time.</inlineHelpText>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Tax_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field for a schedule item that needs to apply a tax.</description>
        <inlineHelpText>Populate this field for a schedule item that needs to apply a tax.</inlineHelpText>
        <label>Tax Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Tax Schedule Items</relationshipLabel>
        <relationshipName>Tax_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guide__c</fullName>
        <description>Fetching GuideId from Event Object</description>
        <formula>EventApi__Event__r.MobileApi__Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guidebook_Import_Id__c</fullName>
        <label>Guidebook Import ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileApi__Room_Guide__c</fullName>
        <description>Return guideId of related room</description>
        <formula>EventApi__Room__r.EventApi__Event__r.MobileApi__Guide__c</formula>
        <label>Room GuideID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Session_Id__c</fullName>
        <externalId>true</externalId>
        <label>Session ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Display_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <formula>EventApi__Event__r.EventApi__Display_Name__c</formula>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <label>Schedule Item</label>
    <nameField>
        <label>Schedule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>